--- a/MerlionPortal/MerlionPortal-war/web/WEB-INF/web.xml
+++ b/MerlionPortal/MerlionPortal-war/web/WEB-INF/web.xml
@@ -4,6 +4,10 @@
         <param-name>javax.faces.PROJECT_STAGE</param-name>
         <param-value>Production</param-value>
     </context-param>
+    <context-param>
+        <param-name>primefaces.THEME</param-name>  
+        <param-value>bootstrap</param-value> 
+    </context-param>
     <filter>
         <filter-name>MerlionPortalFilter</filter-name>
         <filter-class>merlionportal.filters.MerlionPortalFilter</filter-class>
