--- a/MerlionPortal/MerlionPortal-war/nbproject/project.properties
+++ b/MerlionPortal/MerlionPortal-war/nbproject/project.properties
@@ -30,15 +30,24 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.barbecue-1.5-beta1.jar=lib/barbecue-1.5-beta1.jar
 file.reference.bootstrap-1.0.10.jar=lib/bootstrap-1.0.10.jar
+file.reference.commons-beanutils-1.8.0.jar=lib/commons-beanutils-1.8.0.jar
+file.reference.commons-collections-3.2.1.jar=lib/commons-collections-3.2.1.jar
+file.reference.commons-digester-2.1.jar=lib/commons-digester-2.1.jar
 file.reference.commons-fileupload-1.3-javadoc.jar=lib/commons-fileupload-1.3-javadoc.jar
 file.reference.commons-fileupload-1.3.jar=lib/commons-fileupload-1.3.jar
+file.reference.commons-javaflow-20060411.jar=lib/commons-javaflow-20060411.jar
+file.reference.commons-logging-1.1.1.jar=lib/commons-logging-1.1.1.jar
+file.reference.groovy-all-2.0.1.jar=lib/groovy-all-2.0.1.jar
+file.reference.iText-2.1.7.js2.jar=lib/iText-2.1.7.js2.jar
 file.reference.itext-pdfa-5.4.3.jar=lib/itext-pdfa-5.4.3.jar
 file.reference.itext-xtra-5.4.3.jar=lib/itext-xtra-5.4.3.jar
 file.reference.itextpdf-5.4.3.jar=lib/itextpdf-5.4.3.jar
 file.reference.jackson-annotations-2.2.0.jar=lib/jackson-annotations-2.2.0.jar
 file.reference.jackson-core-2.2.0.jar=lib/jackson-core-2.2.0.jar
 file.reference.jackson-databind-2.2.0.jar=lib/jackson-databind-2.2.0.jar
+file.reference.jasperreports-5.6.1.jar=lib/jasperreports-5.6.1.jar
 file.reference.primefaces-5.0.jar=lib/primefaces-5.0.jar
 includes=**
 j2ee.compile.on.save=true
@@ -64,7 +73,16 @@ javac.classpath=\
     ${file.reference.jackson-annotations-2.2.0.jar}:\
     ${file.reference.jackson-core-2.2.0.jar}:\
     ${file.reference.jackson-databind-2.2.0.jar}:\
-    ${file.reference.primefaces-5.0.jar}
+    ${file.reference.primefaces-5.0.jar}:\
+    ${file.reference.barbecue-1.5-beta1.jar}:\
+    ${file.reference.commons-beanutils-1.8.0.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-javaflow-20060411.jar}:\
+    ${file.reference.commons-logging-1.1.1.jar}:\
+    ${file.reference.groovy-all-2.0.1.jar}:\
+    ${file.reference.iText-2.1.7.js2.jar}:\
+    ${file.reference.jasperreports-5.6.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
