--- a/MerlionPortal/MerlionPortal-war/web/WEB-INF/web.xml
+++ b/MerlionPortal/MerlionPortal-war/web/WEB-INF/web.xml
@@ -4,10 +4,11 @@
         <param-name>javax.faces.PROJECT_STAGE</param-name>
         <param-value>Production</param-value>
     </context-param>
-    <context-param>
+    <context-param>  
         <param-name>primefaces.THEME</param-name>  
-        <param-value>bootstrap</param-value> 
-    </context-param>
+        <param-value>bootstrap</param-value>  
+    </context-param>  
+
     <filter>
         <filter-name>MerlionPortalFilter</filter-name>
         <filter-class>merlionportal.filters.MerlionPortalFilter</filter-class>
@@ -37,4 +38,8 @@
     <welcome-file-list>
         <welcome-file>index.xhtml</welcome-file>
     </welcome-file-list>
+    <mime-mapping>
+        <extension>ttf</extension>
+        <mime-type>application/octet-stream</mime-type>
+    </mime-mapping>
 </web-app>
